feat:separacion de vistas de producto

--- a/views/product/pack.ejs
+++ b/views/product/pack.ejs
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <!-- Head-->
-<%- include("./partials/head") %>
+<%- include("../partials/head") %>
 
 <body>
     <!-- Header-->
-    <%- include("./partials/header") %>
+    <%- include("../partials/header") %>
 
     <section class="pd-pack-area">
 
@@ -159,7 +159,7 @@
 
 
     <!-- Footer-->
-    <%- include("./partials/footer") %>
+    <%- include("../partials/footer") %>
 </body>
 
 </html>
