--- a/views/product/productCart.ejs
+++ b/views/product/productCart.ejs
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <!-- Head-->
-<%- include("./partials/head") %>
+<%- include("../partials/head") %>
 
 <body>
     <!-- Header-->
-    <%- include("./partials/header") %>
+    <%- include("../partials/header") %>
 
     <main class="pc-main">
         <section class="pc-cart">
@@ -175,7 +175,7 @@
    
     
     <!-- Footer-->
-    <%- include("./partials/footer") %>
+    <%- include("../partials/footer") %>
 
 </body>
 
