--- a/views/product/productPage.ejs
+++ b/views/product/productPage.ejs
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <!-- Head-->
-<%- include("./partials/head") %>
+<%- include("../partials/head") %>
 
 <body>
     <!-- Header-->
-    <%- include("./partials/header") %>
+    <%- include("../partials/header") %>
 
 
     <main class="pd-main">
@@ -75,10 +75,10 @@
     </main>
    
     <!-- Suscribe email-->
-    <%- include("./partials/suscribe") %>
+    <%- include("../partials/suscribe") %>
     
     <!-- Footer-->
-    <%- include("./partials/footer") %>
+    <%- include("../partials/footer") %>
 
 </body>
 
