--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,8 +10,8 @@
             <li><a href="/login">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
             <li>
                 <div class="pd-pc-links">
-                    <a href="/productPage" class="tienda-botton">Tienda</a>
-                    <a href="/productCart"><i class="fas fa-shopping-cart"></i></a>
+                    <a href="/product/productPage" class="tienda-botton">Tienda</a>
+                    <a href="/product/productCart"><i class="fas fa-shopping-cart"></i></a>
                 </div>
             </li>
         </ul>
