--- a/views/product/productDetail.ejs
+++ b/views/product/productDetail.ejs
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <!-- Head-->
-<%- include("./partials/head") %>
+<%- include("../partials/head") %>
 
 <body>
     <!-- Header-->
-    <%- include("./partials/header") %>
+    <%- include("../partials/header") %>
 
     <section class="pd-product-area">
 
@@ -108,7 +108,7 @@
     </section>
     </div>
     <!-- Footer-->
-    <%- include("./partials/footer") %>
+    <%- include("../partials/footer") %>
 </body>
 
 </html>
